changed the animation to use the IntersectionObserver, still doesn't work quite the way I want it because it was still 'visible' when the name card is above it. just changed top margin to be greater to trigger effect, but it is too high and the scroll feels awkward. going to need to probably change the position of the name card from normal to fixed when it is small.

--- a/src/app/components/styles/about-page.module.css
+++ b/src/app/components/styles/about-page.module.css
@@ -6,7 +6,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 50vh;
+    margin-top: 100vh;
 }
 
 .image {
